made some last changes

--- a/thegear.html
+++ b/thegear.html
@@ -58,7 +58,7 @@
     <!-- /.container -->
 </nav>
     
-<!-- About Us Section -->
+<!-- The Gear Section -->
 <div id="thegearbanner" class="sect">
     <div class="col-md-8 col-md-offset-2"></div>
 </div> 
