--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
     <!-- /.container -->
 </nav>
     
-<!-- About Us Section -->
+<!-- Projects Section -->
 <div id="projectsbanner" class="sect">
     <div class="col-md-8 col-md-offset-2"></div>
 </div>
