--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <img class="logo" src="img/logo_b_and_w_no_title.png">
+                    <div id="logocontainer">
+                        <img class="logo" src="img/logo_b_and_w_no_title.png">
+                    </div>
                     <a href="#div1" class="btn btn-circle page-scroll">
                         <i class="fa fa-angle-double-down animated"></i>
                     </a>
